chore: update author email and project URLs
- Updated author_email to GitHub noreply email
- Updated project URLs to use UNCtools (capital C) for consistency

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = A comprehensive toolkit for handling UNC paths, network drives, an
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Dustin Darcy
-author_email = your.email@example.com
+author_email = 6962246+djdarcy@users.noreply.github.com
 license = MIT
 license_file = LICENSE
 classifiers =
@@ -26,9 +26,9 @@ classifiers =
     Topic :: Software Development :: Libraries :: Python Modules
 keywords = unc, network, windows, path, file, share, subst, path conversion
 project_urls =
-    Bug Reports = https://github.com/djdarcy/unctools/issues
-    Source = https://github.com/djdarcy/unctools
-    Documentation = https://github.com/djdarcy/unctools#readme
+    Bug Reports = https://github.com/djdarcy/UNCtools/issues
+    Source = https://github.com/djdarcy/UNCtools
+    Documentation = https://github.com/djdarcy/UNCtools#readme
 
 [options]
 packages = find:
