--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,11 +43,15 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e ".[dev]"
 
+    - name: Install Windows extras
+      if: runner.os == 'Windows'
+      run: |
+        pip install -e ".[windows]"
+
     - name: Verify pywin32 on Windows
       if: runner.os == 'Windows'
       run: |
         python -c "import win32api; print('pywin32 available:', win32api.__file__)"
-      continue-on-error: true
 
     - name: Run tests
       run: |
