fix: Include utils and windows subpackages in distribution
Changed pyproject.toml [tool.setuptools] from explicit package list
to packages.find configuration. This ensures unctools.utils and
unctools.windows subdirectories are included in the wheel.

Fixes ModuleNotFoundError: No module named 'unctools.utils' when
importing the package after installation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,8 +57,10 @@ docs = [
 "Source" = "https://github.com/djdarcy/unctools"
 "Documentation" = "https://github.com/djdarcy/unctools#readme"
 
-[tool.setuptools]
-packages = ["unctools"]
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["unctools*"]
+exclude = ["tests*"]
 
 [tool.setuptools.dynamic]
 version = {attr = "unctools.__version__"}
